test/Fail/Issue5410-4.agda
{-# OPTIONS --without-K #-}

variable
  @0 A : Set

record D : Set₁ where
  field
    f : A
